--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 
 body {
     font-family: Montserrat, sans-serif;
+	margin: 0;
+    padding: 0;
 	padding-top: 70px; /* Ajuste conforme a altura do seu cabeçalho */
 	overflow-x: hidden; /* Remove rolagem horizontal */	
 }
@@ -28,8 +30,7 @@ body {
     width: 100%;
 	position: fixed; /* Torna o cabeçalho fixo no topo */
     top: 0; /* Posiciona-o no topo da tela */
-    z-index: 1000; /* Garante que ele fique acima do conteúdo da página */
-	top: 0;
+    z-index: 100; /* Garante que ele fique acima do conteúdo da página */
 }
 
 .header-content {
@@ -54,6 +55,7 @@ body {
     gap: 2px; /* Espaçamento entre os itens */
     margin: 0;
     padding: 0;
+	margin-right: 20px;
 }
 
 .menu a {
@@ -101,7 +103,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover; /* Garante que a imagem cubra toda a área */
-	margin-top: 20px;
 	display: block;
 }
 
@@ -196,26 +197,21 @@ h2 {
     font-size: 50px;
     font-weight: bold;
     margin-bottom: 20px;
+}
 
 * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
 }
-    
- body, html {
-        height: 100%;
-}
 
 .container {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh; 
-        width: 100vw;  /* largura total da tela */
+		margin-bottom: 70px;
 }
 
-}
 .botao-portfolio {
     display: inline-block;
     padding: 10px 30px;
@@ -223,9 +219,6 @@ h2 {
     border-radius: 20px 0 20px 0; 
     background-color: #FFFCE2; 
     text-align: center;
-    margin-top: 10px;
-    margin-left: 500px;
-    margin-right: 500px;
 }
 
 .botao-portfolio a {
@@ -237,7 +230,7 @@ h2 {
 }
 
 .botao-portfolio:hover {
-    background-color: #B7CB9E; 
+    background-color: #DEE5C3; 
 }
 
 html, body {
@@ -247,7 +240,7 @@ html, body {
 
 footer {
     background-color: #B7CB9E; 
-    padding:7px;
+    padding:15px;
     text-align: center;
 	max-width: 100%;
     margin-top: 50px;
@@ -267,6 +260,8 @@ footer {
 
 .footer-text {
     color: #0E5935; 
+	font-size: 20px;
+	font-weight: 500;
 }
 
 /* Responsividade */
@@ -337,7 +332,7 @@ footer {
 }
 
 .imagem-inicial img {
-	margin-top: 30px;
+	margin-top: 50px;
 }
 
 .sobre-o-estudio h2 {
@@ -413,23 +408,25 @@ footer {
     border: 1.6px solid #0E5935;
     border-radius: 20px 0 20px 0; 
     text-align: center;
-    margin-top: 0px;
-    margin-left: 100px;
-    margin-right: 100px;
     height: 35px;
-    width: 220px;
+    width: 260px;
     display: flex; /* Usar flexbox para centralização */
     align-items: center; /* Centraliza verticalmente */
     justify-content: center; /* Centraliza horizontalmente */
+	margin-bottom: -10px;
 }
 
 .botao-portfolio a {
-    font-size: 12px; 
+    font-size: 14px; 
     text-decoration: none; /* Remove o sublinhado */
 }
 
     .footer-image {
-    width: 400px;
+    max-width: 100%;
 	margin-right: 20px;
+	}
+	
+	.footer-text {
+		font-size: 15px;
 	}
 }
