--- a/serviços.css
+++ b/serviços.css
@@ -10,6 +10,9 @@ body {
     font-family: Montserrat, sans-serif;
 	padding-top: 70px; /* Ajuste conforme a altura do seu cabeçalho */
     overflow-x: hidden; /* Remove rolagem horizontal */	
+	display: flex;
+    flex-direction: column;
+	flex: 1;
 }
 
 .main-table {
@@ -55,6 +58,7 @@ body {
     gap: 2px; /* Espaçamento entre os itens */
     margin: 0;
     padding: 0;
+	margin-right: 20px;
 }
 
 .menu a {
@@ -158,21 +162,20 @@ body {
 
 
 html, body {
-    overflow-x: hidden;
     margin: 0;
     padding: 0;
-    min-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
 
 footer {
     background-color: #B7CB9E; 
-    padding:7px;
+    padding:15px;
     text-align: center;
-	max-width: 100%;
-    margin-top: 50px;
+	width: 100%;
+    bottom: 0;
+	margin-top: 70px;
 }
 
 .footer-container {
@@ -189,6 +192,8 @@ footer {
 
 .footer-text {
     color: #0E5935; 
+	font-size: 20px;
+	font-weight: 500;
 }
 
 /* Celulares */
@@ -255,7 +260,8 @@ footer {
     .servico-item {
         min-height: 250px; /* Altura menor */
         padding: 10px; /* Menor espaçamento interno */
-        width: 300px /* Preencher quase toda a largura da tela */
+        width: 100%;
+		max-width: 300px;
 		margin: 0 auto; /* Centralizar os quadrados */
     }
 
@@ -287,7 +293,11 @@ footer {
 	}
 	
     .footer-image {
-    width: 400px;
+    max-width: 100%;
 	margin-right: 20px;
+	}
+	
+	.footer-text {
+		font-size: 15px;
 	}
 }
