--- a/contato.css
+++ b/contato.css
@@ -147,6 +147,7 @@ body {
     font-size: 16px;
     background-color: #FFFCE2;
 	resize: vertical;
+	font-family: Montserrat, sans-serif; 
 }
 
 /* Foco nos campos de preenchimento */
